# nlp_lyrics_analysis

./: .gitignore  README.md  code.ipynb  code_all_genre.ipynb  code_pop.ipynb  code_pop_2.ipynb  code_pop_3.ipynb  code_rap.ipynb  code_reggea.ipynb  main.py  pyproject.toml  requirements.txt  xgboost.ipynb
