[project]
name = "nlp-lyrics-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2025.12.0",
    "ipykernel>=7.1.0",
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "nrclex>=3.0.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "statsmodels>=0.14.6",
    "textstat>=0.7.12",
    "textstats>=0.1.2",
    "vadersentiment>=3.3.2",
    "xgboost>=3.1.3",
]
